<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Just learn on Dicoding!</string>
    <string name="title_welcome_page">Welcome to Dicoding!🤩</string>
    <string name="title_signup_page">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Are you ready to read the stories of people joining Dicoding? Let\'s go!😆</string>
    <string name="title_login_page">Sign In</string>
    <string name="name">Full Name</string>
    <string name="message_main_page">DICODING STORY</string>
    <string name="logout">Log out</string>
    <string name="welcome_image">welcome image</string>
    <string name="signin_image">signin image</string>
    <string name="signup_image">signup image</string>
    <string name="story_user_image">story user image</string>
    <string name="description">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="title_upload_story">Upload Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_image">Upload Image</string>
    <string name="desc">Description</string>
    <string name="upload_story">Upload</string>
    <string name="add_story">Add story</string>
    <string name="warning_picture_cannot_empty">Picture cannot empty</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_location">Add my location</string>
    <string name="location">Location</string>
    <string name="location_not_found">Location could not be found. Please try again!</string>
    <string name="retry">Retry</string>
    <string name="no_data_found">No data found</string>

</resources>